# USING-DIGITAL-SIGNATURE-IN-ONLINE-SHOPPING

./: README.md  phases.json
Cert/: ServerCert.crt  code.txt  ec-private-key.pem  ec-public-key.pem
DiditalSignature/: CMakeLists.txt  DiditalSignature.sln  DiditalSignature.vcxproj  DiditalSignature.vcxproj.filters  Makefile  MyPublickey.key  MySecretkey.key  Thuật ngữ quan trọng.docx  api.h  config.h  getData.c  getData.h  getPDFdata.c  getPDFdata.h  poly.h  publickey.key  rounding.c  secretkey.key  sign.c  sign.h  signature.c
DiditalSignature/Debug/: DiditalSignature.exe.recipe  DiditalSignature.ilk  DiditalSignature.vcxproj.FileListAbsolute.txt  signature.obj.enc  vc142.idb
Execute/: MyPublickey.key  MySecretkey.key  publickey.key  secretkey.key
Screen/: App.Designer.cs  App.cs  Client.Designer.cs  Client.cs  ClientForm.Designer.cs  ClientForm.cs  Control.Designer.cs  Control.cs  Invoice.Designer.cs  Invoice.cs  Invoice.resx  Program.cs  Screen.csproj  Screen.sln  Server.Designer.cs  Server.cs  ServerForm.Designer.cs  ServerForm.cs  Test.Designer.cs  Test.cs  data.json  packages.config  phases.json
Screen/Properties/: AssemblyInfo.cs
Tesst/: MySecretkey.key  publickey.key
TestBlob/: TestBlob.sln
TestBlob/TestBlob/: Form1.Designer.cs  Form1.cs  Program.cs  TestBlob.csproj
TestDatabase/: Form1.Designer.cs  Form1.cs  Program.cs  TestDatabase.csproj  TestDatabase.sln  packages.config
TestDatabase/Properties/: AssemblyInfo.cs
dilithium3/: CMakeLists.txt  api.h  config.h  params.h  poly.c  poly.h  randombytes.c  sign.c  signature.c  symmetric.h
(+7 files in other folders)
